test-cases/valid/reject/plus_mismatched_operand_types.ul
void main() {
    println "ABC" + 2.0; // LHS and RHS types must match.
}
